--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -16,6 +16,25 @@
   align-items: center;
 }
 
+.header {
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header img {
+  margin-left: 0.5rem;
+}
+
+.header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   width: 100%;
   height: 100px;
